--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Version 2.2
 
  - Bugfix: proxy object unlocks object when calling method and forced to roll
    back.
+ - Bugfix: prevent object from being accessed after release.
  - Increased granularity of locking at transaction start. Previously locks 
    were per registry, now they are per object.
  - API change: Transaction constructor no longer takes registries as arguments.
