--- a/README
+++ b/README
@@ -1,49 +1,37 @@
 Atomic RMI
 ==========
 
-Overview
+Branches
 --------
 
-The archive contains the following:
+This repository has many branches. Most of them are for hacking new features,
+but some are different (oder or unstable) variants of Atomic RMI. We list a
+number of the branches that can be useful.
 
- - Atomic RMI binaries:
-    * dist/atomicrmi-all-0.2.jar
-    * bin/
+     Branch                 Description
+    ---------------------------------------------------------------------------
+     master                 The most recent stable variant currently this 
+                            is currently supposed to be set to optsva.
 
- - libraries necessary to run Atomic RMI:
-    * lib/cglib-nodep-2.2.jar  
+     optsva                 OptSVA algorithm implementation that bases on SVA
+                            but distinguishes between reads and writes and uses
+                            buferring to effect a number of concurrency
+                            optimizations. It also comes with a bunch of other
+                            optimizations: constant number of spawned threads
+                            (regardless of the number of running transactions),
+                            log buffer, as light synchronization as we could
+                            make it where it made a difference. We also changed
+                            packages and parts of the API here.
 
- - libraries necessary to run the Atomic RMI Precompiler:
-    * lib/jasminclasses-2.4.0.jar  
-    * lib/polyglot-1.3.3.jar  
-    * lib/sootclasses-2.4.0.jar
+     sva                    SVA algorithm implementation. Does not distinguish 
+                            between read and writes at all, allows manual 
+                            rollback and has in-place modifications.
 
- - examples
-    * test/
- 
- - scripts for running the examples:
-    * scripts/server.sh
-    * scripts/client_audit.sh
-    * scripts/client_transfer.sh
-    * scripts/client_transfer_retry.sh
-
-Running the examples
---------------------
-
-  The example consists of a server and clients that communicate with it. 
-
-  They all take two commandline arguments:
-    * the name of the host where RMI registry is running
-    * the port of RMI registry
-
-  First, start the server: 
-    scripts/server.sh localhost 1099
-
-  Then, in another terminal start either of the clients:
-    scripts/client_audit.sh localhost 1099
-    scripts/client_transfer.sh localhost 1099
-    scripts/client_transfer_retry.sh localhost 1099
-
-  Starting the precompiler:
-    scripts/precompiler.sh --sources=<DIRECTORY> --classes=<DIRECTORY> <CLASSNAME>
-
+     sva-read-opt           SVA algorithm with read-only optimization tacked 
+                            on. If an object is read-only by a transaction it
+                            is copied to a buffer and imediatelly released;
+                            subsequent accesses are performed on the buffer. 
+                            All other objects are treated like SVA, so have
+                            in-place modifications. Even though not heavily, it
+                            should be relatively stable.
+    
